--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,21 +1,22 @@
 FROM python:3.11-slim
 
 ENV PYTHONUNBUFFERED=1 \
-    PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    POETRY_VERSION=1.8.3
+    PIP_DISABLE_PIP_VERSION_CHECK=1
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates curl wget git build-essential \
-    ttyd \
   && rm -rf /var/lib/apt/lists/*
+
+# Install ttyd from GitHub releases
+RUN wget -O /usr/local/bin/ttyd https://github.com/tsl0922/ttyd/releases/download/1.7.7/ttyd.x86_64 \
+  && chmod +x /usr/local/bin/ttyd
 
 WORKDIR /app
 
-# 复制网关与 aiops（以工程根为构建上下文）
-COPY gateway/ /app/gateway/
-COPY . /app/aiops/
+# 复制整个项目到 /app
+COPY . /app/
 
-RUN pip install --no-cache-dir fastapi uvicorn[standard] websockets
+RUN pip install --no-cache-dir fastapi uvicorn[standard] websockets stransi
 
 EXPOSE 8081
 
