--- a/gateway/q-gateway.service
+++ b/gateway/q-gateway.service
@@ -46,8 +46,11 @@ TasksMax=100
 NoNewPrivileges=true
 PrivateTmp=true
 ProtectSystem=strict
-ProtectHome=true
+# 允许进入 /home 目录（read-only 即可满足 chdir 和读取 .venv）
+ProtectHome=read-only
+# 允许写入工作目录与会话目录
 ReadWritePaths=/home/ubuntu/huixin/aiops_v2
+ReadWritePaths=/srv/q-sessions
 ProtectKernelTunables=true
 ProtectKernelModules=true
 ProtectControlGroups=true
