--- a/gateway/q-gateway.service
+++ b/gateway/q-gateway.service
@@ -4,13 +4,13 @@ After=network.target
 Wants=network-online.target
 
 [Service]
-Type=exec
+Type=simple
 User=ubuntu
 Group=ubuntu
 WorkingDirectory=/home/ubuntu/huixin/aiops_v2
 
 # Environment
-Environment=PATH=/home/ubuntu/huixin/aiops_v2/.venv/bin:/usr/local/bin:/usr/bin:/bin
+Environment=PATH=/home/ubuntu/huixin/aiops_v2/.venv/bin:/home/ubuntu/.local/bin:/usr/local/bin:/usr/bin:/bin
 Environment=PYTHONPATH=/home/ubuntu/huixin/aiops_v2
 Environment=SOP_DIR=/home/ubuntu/huixin/aiops_v2/sop
 Environment=TASK_DOC_PATH=/home/ubuntu/huixin/aiops_v2/task_instructions.md
@@ -19,24 +19,31 @@ Environment=HOME=/home/ubuntu
 Environment=QTTY_HOST=127.0.0.1
 Environment=QTTY_PORT=7682
 Environment=QTTY_PING=55
-Environment=QTTY_MAX_CONN=20
+Environment=QTTY_MAX_CONN=64
+Environment=HTTP_HOST=0.0.0.0
+Environment=HTTP_PORT=8081
+Environment=SSE_PING_SECONDS=10
+Environment=Q_OVERALL_TIMEOUT=120
 Environment=ALERT_JSON_PRETTY=1
 Environment=Q_CMD=/home/ubuntu/.local/bin/q
 
 # Service execution
-ExecStartPre=-/usr/bin/pkill -f 'uvicorn.*app:app'
+ExecStartPre=-/usr/bin/pkill -f 'uvicorn.*gateway.app:app'
 ExecStartPre=-/usr/bin/pkill -f 'ttyd.*q_entry.sh'
 ExecStart=/usr/bin/bash -lc 'bash gateway/start.sh'
 ExecStop=/bin/bash -c 'pkill -f "uvicorn.*app:app" || true; pkill -f "ttyd.*q_entry.sh" || true'
 ExecReload=/bin/kill -HUP $MAINPID
 
-# Process management
+# Process management / limits
 Restart=always
-RestartSec=10
+RestartSec=5
 KillMode=mixed
 TimeoutStartSec=60
 TimeoutStopSec=30
 KillSignal=SIGTERM
+TasksMax=4096
+LimitNOFILE=65535
+LimitNPROC=4096
 
 # Resource limits
 MemoryMax=2G
@@ -58,7 +65,13 @@ ProtectKernelTunables=true
 ProtectKernelModules=true
 ProtectControlGroups=true
 
-# Logging
+# Resource limits（放宽以避免 EAGAIN）
+MemoryMax=2G
+MemoryHigh=1536M
+CPUQuota=200%
+
+# Logging & diagnostics
+Environment=RUST_BACKTRACE=1
 StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=q-gateway
